[package]
name = "what-i-want"
version = "0.1.0"
authors = ["PurePeace <940857703@qq.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pure-peace/what-i-want"
description = "Some tools to help with the return value"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

